move bg color to react default

--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
   overflow: hidden;
   margin: 0px;
   padding: 0px;
-  background-color: #333;
+  background-color: #282c34;
   height: 100vh;
 }
 
