--- a/src/style.css
+++ b/src/style.css
@@ -15,14 +15,9 @@ body {
   overflow: hidden;
 }
 
-.react-tiger-transition--route {
+.react-tiger-transition--route, .react-tiger-transition--fixed {
 	width: 100%;
-	height: 100%;
 	position: absolute;
-	top: 0;
-	left: 0;
-  bottom: 0;
-  right: 0;
 	visibility: visible;
 	overflow: hidden;
 	-webkit-backface-visibility: hidden;
@@ -34,6 +29,18 @@ body {
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
 	transform-style: preserve-3d;
+}
+
+.react-tiger-transition--route {
+	height: 100%;
+	top: 0;
+	left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.react-tiger-transition--fixed {
+	z-index: 3;
 }
 
 .react-tiger-transition--screen {
