secondary theme on exmaple site

--- a/example/src/style.css
+++ b/example/src/style.css
@@ -13,3 +13,8 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
+
+.gradient-text {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
