--- a/example/src/style.css
+++ b/example/src/style.css
@@ -20,3 +20,19 @@ body {
 }
 
 ::-webkit-scrollbar { display: none; }
+
+.iframe_container {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 - this is responsive by adjusting the hight according to the width! */
+	padding-top: 24px;
+	height: 0;
+  margin-bottom: 24px;
+}
+
+.iframe_container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
