--- a/website/src/style/markdown.css
+++ b/website/src/style/markdown.css
@@ -268,7 +268,7 @@ https://github.com/sindresorhus/github-markdown-css */
 }
 
 .markdown-body a {
-  color: #0366d6;
+  color: #f57c00;
   text-decoration: none;
 }
 
